<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ConvexAnalysisClass</class>
 <widget class="QWidget" name="ConvexAnalysisClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>350</width>
    <height>230</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>ConvexAnalysis</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QWidget" name="widget" native="true">
     <widget class="QLineEdit" name="lineEditVector">
      <property name="geometry">
       <rect>
        <x>50</x>
        <y>30</y>
        <width>200</width>
        <height>20</height>
       </rect>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="placeholderText">
       <string>输入矢量：</string>
      </property>
     </widget>
     <widget class="QPushButton" name="openFile">
      <property name="geometry">
       <rect>
        <x>280</x>
        <y>30</y>
        <width>31</width>
        <height>24</height>
       </rect>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="icon">
       <iconset resource="login.qrc">
        <normaloff>:/login/res/openFile.png</normaloff>:/login/res/openFile.png</iconset>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEditOutputVector">
      <property name="geometry">
       <rect>
        <x>50</x>
        <y>80</y>
        <width>200</width>
        <height>20</height>
       </rect>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="placeholderText">
       <string>输出矢量：</string>
      </property>
     </widget>
     <widget class="QPushButton" name="outputVectorButton">
      <property name="geometry">
       <rect>
        <x>280</x>
        <y>80</y>
        <width>31</width>
        <height>24</height>
       </rect>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="icon">
       <iconset resource="login.qrc">
        <normaloff>:/login/res/saveFile.png</normaloff>:/login/res/saveFile.png</iconset>
      </property>
     </widget>
     <widget class="QPushButton" name="begin">
      <property name="geometry">
       <rect>
        <x>110</x>
        <y>130</y>
        <width>100</width>
        <height>40</height>
       </rect>
      </property>
      <property name="text">
       <string>开始</string>
      </property>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="login.qrc"/>
 </resources>
 <connections/>
</ui>
